--- a/index.css
+++ b/index.css
@@ -7,17 +7,17 @@ a {
     color: rgb(255, 0, 0);
 }
 
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 #header {
     font-family: cursive;
     color: rgb(0, 0, 0);
     text-align: center;
     font-size: 50px;
-}
-
-#img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 #header-2 {
@@ -34,9 +34,9 @@ a {
 }
 
 .list {
-    font-size: 20px;
+    font-size: 17px;
     text-align: center;
-    line-height: 20px;
+    line-height: 15px;
 }
 
 .footer {
