--- a/index.css
+++ b/index.css
@@ -1,47 +1,93 @@
-body {
+* {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: rgb(255, 255, 255);
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    
+}
+
+body {
+    height: 100%;
+    background-image: url(img/background.jpg);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-color: black;
 }
 
 a {
     color: rgb(255, 0, 0);
+    text-decoration: none;
+    font-family:Verdana, Geneva, Tahoma, sans-serif
+}
+
+button {
+    width: 250px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 2px 2px 2px rgb(70, 70, 70);
+    border: 1px solid black;
+    border-radius: 4px;
+    color: black;
+    padding: 10px 15px;
+    margin: 5px auto 5px auto;
+    text-align: center;
+    text-decoration: none;
+    display: block;
+    font-size: 16px;
+}
+
+button:hover {
+    background-color: rgb(255, 176, 206);
 }
 
 img {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    border: 1px solid black;
+    box-shadow: 2px 2px 10px black;
 }
 
-#header {
+h1 {
     font-family: cursive;
     color: rgb(0, 0, 0);
     text-align: center;
     font-size: 50px;
+    padding: 5px;
 }
 
-#header-2 {
+h2 {
     font-family: cursive;
     color: rgb(0, 0, 0);
     text-align: center;
-    font-size: 20px;
+    font-size: 30px;
     line-height: 40px;
+    padding: 10px;
+}
+
+.container {
+    width: 600px;
+    background-color: rgb(255, 243, 218);
+    margin: 10px auto 10px auto;
+    padding: 10px 50px 35px 50px;
+    border: 1px solid black; 
+    border-radius: 10px;
+}
+
+.content {
+    width: 500px;
+    padding: 10px;
+    display: flexbox;
 }
 
 .para {
     text-align: center;
-    line-height: 0px;
-}
-
-.list {
-    font-size: 17px;
-    text-align: center;
-    line-height: 15px;
 }
 
 .footer {
     font-family: monospace;
-    margin-left: 1200px;
     color: rgb(112, 112, 112);
+    margin-left: 1200px;
+    display: inline-block;
 }
 
